fix: refactor CORS to use CorsConfigurationSource for better Spring Security integration